--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Jon Gorman",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mongoose": "^5.7.1"
