--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "authboilerplate",
+  "name": "ideasAppWithAuth",
   "version": "1.0.0",
-  "description": "basic authentication",
+  "description": "basic authentication app",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,8 +14,11 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
+    "method-override": "^3.0.0",
     "mongoose": "^5.7.1"
   }
 }
